--- a/Todo
+++ b/Todo
@@ -3,13 +3,24 @@ Restrict page access by userID
 Register 2 columns for fields
 Move Header out of App.js
 Create headers for each page specifically
+
+Frontend Main:
 Create groups array
 Organize Groups array onto page
 Create movies array
 Organized movie array onto page
 Create group selector in movies section
 
+Frontend Account:
+Create areas for account name, desc
+
+Frontend Group:
+Display areas for group name, desc, members, yes movies list
+
 Email Verification:
 
 API:
 Add chat API. Takes in date/time, login, and message
+
+Backburner:
+Friends system
