--- a/Todo
+++ b/Todo
@@ -13,6 +13,7 @@ Create group selector in movies section
 
 Frontend Account:
 Create areas for account name, desc
+Way to open specific accounts per page
 
 Frontend Group:
 Display areas for group name, desc, members, yes movies list
