--- a/Todo
+++ b/Todo
@@ -17,6 +17,7 @@ Way to open specific accounts per page
 
 Frontend Group:
 Display areas for group name, desc, members, yes movies list
+Way to open specific groups per page
 
 Email Verification:
 
